Revision history for Perl extension OrePAN2

{{$NEXT}}

0.34 2014-12-01T14:21:15Z

    - If two packages have the same version, the one which is last in will be preferred (oalders)
    - OrePAN2::Indexer::make_index() now returns an OrePAN2::Index object (oalders)

0.33 2014-11-22T00:38:07Z

    - Add IO::Socket::SSL to dependencies (Ivan Bessarabov)

0.32 2014-11-18T03:37:27Z

    - Remove MetaCPAN::API, which is now deprecated (oalders)
    - Use numified_version when getting provides from MetaCPAN (oalders)
    - Doc updates (Ivan Bessarabov)
    - Fixed `--author` in orepan2-inject

0.31 2014-09-08T19:51:08Z

    - Fix some undef warnings (miyagawa)
    - Add an option to use MetaCPAN for provides lookups (oalders)
    - Update minimum version of Archive::Extract to suppress warnings
      (tokuhirom)

0.30 2014-05-04T23:54:02Z

    - Use $self->{author} when the option is not provided (Ichito Nagata)

0.29 2014-03-05T06:06:48Z

    - Index new version instead of die.

0.28 2014-02-28T09:00:20Z

    - Added orepan2-gc, orepan2-merge-index

0.27 2014-02-28T07:58:02Z

    - Fixed caching bug.

0.26 2014-02-28T07:44:18Z

    - [EXPERIMENTAL] Added experimental cache mode.
      (tokuhirom)

0.25 2014-02-28T01:00:53Z

    - Fixed deps

0.24 2014-02-27T20:50:53Z

    - Added OrePAN2::Repository
      (tokuhirom)

0.23 2014-02-27T19:01:17Z

    - Fixed testing issue
      (tokuhirom)

0.22 2014-02-27T07:04:18Z

    - Use IO::Zlib instead of PerlIO::gzip.
      (tokuhirom)

0.21 2014-02-26T09:47:32Z

    - OrePAN2::Indexer: Make temporary file in the same parition.
        It's required by atomic operation.
        (tokuhirom)

0.20 2014-02-26T02:34:49Z

    - OrePAN2::Index: add_index does not index the package by default. Added 'replace' option.
    - OrePAN2::Index: Use hash as internal representation for OrePAN2::Index.
    - OrePAN2::Index: Fixed gunzip.
    - OrePAN2::Index: Added delete_index method.
      (tokuhirom)

0.19 2014-02-26T01:30:14Z
